--- a/contatooh/package.json
+++ b/contatooh/package.json
@@ -15,11 +15,18 @@
     "express": "^4.8.8",
     "express-load": "^1.1.15",
     "express-session": "^1.7.6",
+    "helmet": "^0.4.2",
     "method-override": "^2.1.3",
+    "mongo-sanitize": "^1.0.0",
     "mongodb": "^1.4.40",
     "mongoose": "^3.8.40",
     "mongoose-findorcreate": "^0.1.2",
     "passport": "^0.2.2",
     "passport-github": "^0.1.5"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-copy": "^0.7.0"
   }
 }
