--- a/contatooh/package.json
+++ b/contatooh/package.json
@@ -32,6 +32,7 @@
     "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-ng-annotate": "^0.5.0",
-    "grunt-usemin": "^2.6.2"
+    "grunt-usemin": "^2.6.2",
+    "karma": "^0.12.37"
   }
 }
