--- a/contatooh/package.json
+++ b/contatooh/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "contatooh",
+  "name": "tranquil-lowlands-44567",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -34,5 +34,7 @@
     "grunt-ng-annotate": "^0.5.0",
     "grunt-usemin": "^2.6.2",
     "karma": "^0.12.37"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
