--- a/contatooh/package.json
+++ b/contatooh/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tranquil-lowlands-44567",
+  "name": "rcandidocontatooh",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
