--- a/bower.json
+++ b/bower.json
@@ -14,5 +14,8 @@
     "angular-route": "1.3",
     "bootstrap": "~3.3.6",
     "angular-resource": "1.3"
+  },
+  "devDependencies": {
+    "angular-mocks": "1.3"
   }
 }
