--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "passport-github": "^0.1.5"
   },
   "devDependencies": {
+    "angular-mocks": "^1.3.20",
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.1",
@@ -33,7 +34,10 @@
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-ng-annotate": "^0.5.0",
     "grunt-usemin": "^2.6.2",
-    "karma": "^0.12.37"
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.12.37",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-jasmine": "^0.3.8"
   },
   "keywords": [],
   "description": ""
